<resources>
    <string name="app_name">PrettyPets</string>
    <string name="title">PrettyPets</string>
    <string name="open_menu">Secciones</string>
    <string name="close_menu">Menu cerrado</string>
    <string name="user">Username</string>
    <string name="pass">Password</string>
    <string name="btnLogin">Login</string>
    <string name="btnRegister">Registrate</string>
    <string name="t_gender">Género</string>
    <string name="hintContact">Número de contacto</string>
    <string name="h_age">Edad</string>
    <string name="h_pass">Contraseña</string>
    <string name="h_user">Username</string>
    <string name="h_name">Nombre y Apellidos</string>
    <string name="titleRegMascota">Registro de mascota</string>
    <string name="petName">Nombre</string>
    <string name="petAge">Edad</string>
    <string name="petType">Tipo</string>
    <string name="Doggo">Perro</string>
    <string name="Catte">Gato</string>
    <string name="male">Macho</string>
    <string name="female">Hembra</string>
    <string name="petSex">Sexo</string>
    <string name="finishHim">Finalizar</string>
    <string name="petRace">Raza</string>
    <string name="bitacora">Bitácora</string>
    <string name="textBitacora">Tus mascotas deben estar debidamente vacunadas y desparasitadas, para esto, te recomendamos las siguientes fechas, y así tengas en cuenta a tu peludito en sus cuidados ¡Una mascota sana es una mascota feliz!</string>
    <string name="textnotfound">No encontrado</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appliedto">Aplicado a</string>
    <string name="doctor">Doctor</string>
    <string name="vaccine">Vacuna</string>
    <string name="vacdate">Fecha</string>
    <string name="titleCarnet">Carnet de vacunación</string>
    <string name="menu_info">Información</string>
    <string name="menu_vacunas">Vacunas</string>
    <string name="menu_aboutgatos">Sobre gatos</string>
    <string name="menu_aboutperros">Sobre perros</string>
    <string name="vacunasextuple">Vacuna séxtuple u óctuple</string>
    <string name="doggosvacunas">Vacunas para los perros</string>
    <string name="sextupleinfo">La vacuna séxtuple u óctuple, es fundamental durante los primeros meses de vida del cachorro. La séxtuple, previene las siguientes enfermedades: Moquillo, Hepatitis, Adenovirosis, Parainfluenza, Parvovirosis y Leptospirosis; la óctuple previene las mismas más el Cornovirus y la llamada tos de las perreras. Se puede poner cualquiera de las dos, según indique el veterinario.</string>
    <string name="antirrabicatitle">Vacuna antirrábica</string>
    <string name="vacuna_triple_felina">Vacuna Triple Felina</string>
    <string name="vacunas_para_los_gatos">Vacunas para los gatos</string>
    <string name="infoantirrabica">Es una vacuna que es común para ambas especies.Es obligatoria por ley desde los dos meses y cada un año. La rabia es una enfermedad mortal, que ataca a animales y humanos, siendo fundamental la vacunación para prevenirla.</string>
    <string name="infotriplefelina">La vacuna triple felina, previene la Rinotraquetis Viral, el Calcivirus Felino y la Panleucopenia. Es crucial para la salud y vida del gato, ya que enfermedades como la Panleucopenia atacan los glóbulos blancos del gato y pueden acabar con su vida.</string>
    <string name="antirrabicagatos">Vacuna antirrábica</string>
    <string name="inforabiagatos">Es una vacuna que es común para ambas especies. Es obligatoria por ley desde los dos meses y cada un año. La rabia es una enfermedad mortal, que ataca a animales y humanos, siendo fundamental la vacunación para prevenirla.</string>
    <string name="vacunaleucemia">Vacuna contra la leucemia felina</string>
    <string name="infoleucemia">Sólo deben vacunarse los gatos que no tienen el virus de la leucemia felina, lo que se puede saber fácilmente mediante una prueba. Es importante realizarla lo antes posible, porque este virus puede desencadenar en cáncer y es altamente peligroso. Por otro lado, hay controversia en torno a esta vacuna, por los importantes efectos secundarios que puede provocar. Por eso se recomienda que, los gatos que no tienen peligro de contagiarse (gatos que no salgan nunca a exteriores ni tengan contacto con gatos desconocidos) no se vacunen. En caso de hacerlo, las primeras dos dosis se deben acordar con un veterinario, durante los primeros seis meses de vida y luego pasa a ser una vacuna anual, que se puede aplicar junto con la triple y antirrábica.</string>
    <string name="desparasitacionesTitle">Desparasitaciones</string>
    <string name="weight">Peso</string>
    <string name="product">Producto</string>
    <string name="receiverpet">Mascota</string>
    <string name="details">Detalles...</string>
    <string name="titleVets">Lista de veterinarios</string>
    <string name="fechaaddpar">Fecha</string>
    <string name="titleaddpar">Agregar desparasitaciones</string>
    <string name="pesoaddpar">Peso</string>
    <string name="productoaddpar">Producto</string>
    <string name="proximaaddpar">Próxima aplicacion</string>
    <string name="addvac">Agregar</string>
    <string name="addvacuna">Agregar</string>
    <string name="vetaddvac">Veterinario</string>
    <string name="sickaddvac">Enfermedad</string>
    <string name="dateaddvac">Fecha</string>
    <string name="registertitle">Registro de usuario</string>
    <string name="radio_woman">Mujer</string>
    <string name="radio_man">Hombre</string>
    <string name="edad_en_meses">Edad(en meses)</string>
    <string name="titleaboutdogs">Conoce a tu peludito canino!</string>
    <string name="fact1">Los perros son los mejores amigos del hombre, si ya tienes uno, deberías saber que son bastante tiernos e inquietos. Es por esto que debes sacarlos de paseo por lo menos una vez al día, no sólo para que puedan disponer de sus necesidades sino también para que conozca otras mascotas.</string>
    <string name="fact2">Los perros, son los animales domésticos por excelencia, son comúnmente utilizados como mascotas, y se dice que es siempre el mejor amigo del hombre. Los hay de muchísimas razas diferentes, y específicamente según cada raza, tendrá hábitos, y características particulares.Según la raza del perro, su esperanza de vida varía, sin embargo, en términos generales podemos decir, que pueden vivir entre los 8 y 15 años, aunque hay registros de perros que gozando de buena salud vivieron hasta los 29 años.</string>
    <string name="fact3">Al ser animales domésticos, toda su vida, su desarrollo, alimentación y cuidado estará a cargo de sus dueños, siendo animales esencialmente carnívoros, podemos decir que existen alimentos no recomendables como el chocolate, los huesos de pollo ya que al ser triturados por sus dientes pueden convertirse en astillas que perforen su estomago, golosinas y la leche en aquellos perros que son intolerantes a la lactosa.</string>
    <string name="fact4">Las hembras luego de un periodo de gestación de sus crías, puede parir, según la raza entre 1 y 5 crías. Debes cuidarla en este período de tiempo y no dejar que haga movimientos muy bruscos, además, llevarla al veterinario en caso de cualquier emergencia</string>
    <string name="titleaboutcats">Conoce a tu peludito felino!</string>
    <string name="fact5">Los gatos son una de las mascotas que más aceptación tienen entre las personas, junto con los perros. Estos felinos tienen una forma de ser muy diferente de la de estos caninos, algo que les hace ser muy especiales, tanto por su actitud, como también por sus características</string>
    <string name="fact6">A diferencia de otros grandes felinos, estos, dado su tamaño, empezaron a empatizar con los humanos debido a que nuestros ancestros lo tenían como parte importante de su sociedad, llegando incluso, en época del Antiguo Egipto, a considerarse antiguos dioses que se habían transformado en estos animales astutos y solitarios.</string>
    <string name="fact7">Necesitan disfrutar de su independencia, a diferencia de otras mascotas como los perros, estos pequeños felinos van a hacer su vida con tranquilidad, aunque cuando requiere de cariños y de atención va a buscar a la persona que se encuentra con él para que lo rasque o juegue. A pesar de esta fama, también necesitan el contacto con sus dueños</string>
    <string name="fact8">Los gatos son principalmente carnívoros, aunque también van a necesitar de verduras para desarrollarse mejor. El porcentaje de este último será muy reducido, ya que su sistema digestivo está mejor preparado para la carne o el pienso elaborado con carne, pero sin embargo, una alimentación en la que se incluya verduras va a conseguir que su estómago, como también sus intestinos queden más limpios.</string>
</resources>
