<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="movil.alejandralandinez.test.RegisterActivity"
    >

    <data>
        <variable
            name="handler1"
            type="movil.alejandralandinez.petsapp.RegisterActivity" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="fill_horizontal"
            android:background="@drawable/bg3" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/enchantingceleb"
            android:gravity="center"
            android:text="@string/registertitle"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView" />

        <EditText
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/h_name"
            android:textColorHint="@color/cardview_dark_background"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/username"
            app:layout_constraintEnd_toEndOf="@+id/username"
            app:layout_constraintStart_toStartOf="@+id/username"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_chainStyle="spread" />

        <EditText
            android:id="@+id/username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/h_user"
            android:textColorHint="@color/cardview_dark_background"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/password"
            app:layout_constraintEnd_toEndOf="@+id/password"
            app:layout_constraintStart_toStartOf="@+id/password"
            app:layout_constraintTop_toBottomOf="@+id/name" />

        <EditText
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/h_pass"
            android:textColorHint="@color/cardview_dark_background"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@+id/age"
            app:layout_constraintEnd_toEndOf="@+id/age"
            app:layout_constraintStart_toStartOf="@+id/age"
            app:layout_constraintTop_toBottomOf="@+id/username" />

        <EditText
            android:id="@+id/age"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/h_age"
            android:textColorHint="@color/cardview_dark_background"
            android:inputType="number"
            app:layout_constraintBottom_toTopOf="@+id/contact"
            app:layout_constraintEnd_toEndOf="@+id/contact"
            app:layout_constraintStart_toStartOf="@+id/contact"
            app:layout_constraintTop_toBottomOf="@+id/password" />

        <EditText
            android:id="@+id/contact"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="128dp"
            android:layout_marginEnd="64dp"
            android:layout_marginStart="64dp"
            android:ems="10"
            android:hint="@string/hintContact"
            android:inputType="phone"
            android:textColorHint="@color/cardview_dark_background"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/age" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="147dp"
            android:layout_height="55dp"
            android:layout_marginBottom="70dp"
            android:layout_marginEnd="80dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >

            <RadioButton
                android:id="@+id/gMujer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/radio_woman"
                />

            <RadioButton
                android:id="@+id/gHombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/radio_man" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/t_gender"

            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintEnd_toStartOf="@+id/radioGroup"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contact" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/floatBtnSiguiente"
            android:layout_width="58dp"
            android:layout_height="52dp"
            android:layout_marginBottom="24dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_arrow_forward"
            android:onClick="@{()-> handler1.next()}"
            />


    </android.support.constraint.ConstraintLayout>
</layout>